# ======================================================================
# Written by Antoine Le Hyaric
# http://www.ljll.math.upmc.fr/lehyaric
# ======================================================================
# headeralh default=0 make start=07/05/2014 written

# ALH - 7/5/14 - <<DOC_not_in_FFCS>> The DOC subdirectory is big (100Mb) and not useful for FFCS. So we just leave it
# out during FFCS compilation. Tip found at [[http://stackoverflow.com/questions/15874325/conditional-ac-output]]

# Local Variables:
# mode:makefile
# ispell-local-dictionary:"british"
# coding:utf-8
# End:
